[tool.poetry]
name = "rtt-sik-comms-package"
version = "0.1.0"
description = ""
authors = ["Tyler Flar <tflar@ucsd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
